# shashki-engine

./: .gitignore  CMakeLists.txt  COPYING  README.md
shashki-benchmark/: CMakeLists.txt
shashki-benchmark/src/: benchmark.cpp
shashki-cli/: CMakeLists.txt
shashki-cli/src/: cli.cpp  main.cpp
shashki-engine/: CMakeLists.txt
shashki-engine/include/shashki-engine/: common.hpp  engine.hpp  evaluation.hpp  move-generation.hpp
shashki-engine/src/: common.cpp  engine.cpp  evaluation.cpp  move-generation.cpp
